--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -3,8 +3,8 @@
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/sms
 spring.datasource.username=root
-#spring.datasource.password=
-spring.datasource.password=university
+spring.datasource.password=
+#spring.datasource.password=university
 spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=false
 #spring.jpa.hibernate.ddl-auto=none
