--- a/application/src/main/resources/application.properties
+++ b/application/src/main/resources/application.properties
@@ -1,7 +1,5 @@
-
-
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
-spring.datasource.url=jdbc:mysql://localhost:3306/sms
+spring.datasource.url=jdbc:mysql://localhost:3306/store
 spring.datasource.username=root
 spring.datasource.password=
 #spring.datasource.password=university
@@ -9,8 +7,5 @@ spring.jpa.database-platform=org.hibernate.dialect.MySQLDialect
 spring.jpa.show-sql=false
 #spring.jpa.hibernate.ddl-auto=none
 spring.jpa.hibernate.ddl-auto=create
-
-
-
-spring.mvc.view.prefix= /WEB-INF/pages/
-spring.mvc.view.suffix= .jsp
+spring.mvc.view.prefix=/WEB-INF/pages/
+spring.mvc.view.suffix=.jsp
